# palindromes

./: Cargo.toml  LICENSE  README.md  calculate.py  math.txt  mip_main.py  mirrored.py  naive.py  naive_results.txt  ortools_main.py  plot.py  profile_results  pruned_mod.py  pruned_more.py  pruned_more2.py  pruned_more_results.txt  pruned_profile.py  pruned_table.py  recursive.py  results
raw_results/: results2  results3  results4
results/: mirror.txt  plot.py  pruned_table.txt  rust.txt  tree_search.txt
src/: main.rs  par_bitmap_table.rs  remainder_table.rs  sort.rs
