[package]
name = "palindromes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethnum = { version = "1.3.2", features = ["serde"] }
rayon = "1.7.0"
once_cell = "1.17.1"
sysinfo = "0.28.2"
ctrlc = { version = "3.2.5", features = ["termination"] }
serde = { version = "1.0.155" , features = ["derive"] }
serde_json = "1.0.94"
