[package]
name = "palindromes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethnum = { version = "1.4.0", features = ["serde"] }
rayon = "1.8.0"
sysinfo = "0.29.10"
ctrlc = { version = "3.4.1", features = ["termination"] }
serde = { version = "1.0.189" , features = ["derive"] }
serde_json = "1.0.107"
