[package]
name = "palindromes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethnum = { version = "1.5.0", features = ["serde"] }
rayon = "1.10.0"
sysinfo = "0.33.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
serde = { version = "1.0.217" , features = ["derive"] }
serde_json = "1.0.134"
